<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:id="@+id/BackgroundImage"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:alpha="0.90"
        android:contentDescription="@string/BackGroundDescription"
        android:scaleType="fitXY"
        app:srcCompat="@drawable/main_fragment_background"
        tools:ignore="MissingConstraints" />

    <androidx.cardview.widget.CardView
        android:id="@+id/InformationTable"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="5dp"
        android:layout_marginTop="5dp"
        android:layout_marginEnd="5dp"
        android:backgroundTint="@color/card_blue_bg"
        app:cardCornerRadius="10dp"
        app:cardElevation="0dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="MissingConstraints">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/InformationTableContainer"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/CityNameTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/CityNameTextView"
                android:textColor="@color/white"
                android:textSize="24sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/InformationTableBackGround" />

            <TextView
                android:id="@+id/LastForecastUpdateTime"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:text="@string/LastForecastUpdateTime"
                android:textSize="16sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />


            <ImageView
                android:id="@+id/InformationTableBackGround"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:contentDescription="@string/BackGroundDescription"
                android:src="@drawable/ic_launcher_foreground"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/WindSpeed"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/WindSpeed"
                android:textColor="@color/white"
                android:textSize="16sp"
                app:layout_constraintBottom_toTopOf="@+id/WeatherCondition"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/Temperature" />

            <TextView
                android:id="@+id/Temperature"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/Temperature"
                android:textColor="@color/white"
                android:textSize="60sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/CityNameTextView" />

            <TextView
                android:id="@+id/WeatherCondition"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/WeatherCondition"
                android:textColor="@color/white"
                android:textSize="16sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/Temperature" />

            <TextView
                android:id="@+id/TemperatureInterval"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="3dp"
                android:layout_marginBottom="8dp"
                android:text="@string/TemperatureInterval"
                android:textColor="@color/white"
                android:textSize="16sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/WeatherCondition" />

            <AutoCompleteTextView
                android:id="@+id/SearchBarPreviewText"
                android:layout_width="100dp"
                android:layout_height="50dp"
                android:layout_marginStart="40dp"
                android:hint="Search..."
                app:layout_constraintBottom_toBottomOf="parent"
                tools:ignore="LabelFor" />

            <ImageButton
                android:id="@+id/SearchButton"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_marginStart="4dp"
                android:layout_marginBottom="4dp"
                android:background="@drawable/baseline_search_24"
                android:contentDescription="@string/BackGroundDescription"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toEndOf="@+id/SearchBarPreviewText" />

            <ImageButton
                android:id="@+id/RefreshButton"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_marginTop="14dp"
                android:layout_marginEnd="5dp"
                android:background="@drawable/baseline_refresh_24"
                android:contentDescription="@string/BackGroundDescription"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/WindSpeed" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.cardview.widget.CardView>

    <com.google.android.material.tabs.TabLayout
        android:id="@+id/ScreenSwitcher"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/card_blue_bg"
        android:layout_marginTop="3dp"
        app:layout_constraintEnd_toEndOf="@+id/InformationTable"
        app:layout_constraintStart_toStartOf="@+id/InformationTable"
        app:layout_constraintTop_toBottomOf="@+id/InformationTable"
        tools:ignore="MissingConstraints">
    </com.google.android.material.tabs.TabLayout>

    <androidx.viewpager2.widget.ViewPager2
        android:id="@+id/MainViewPager"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="@+id/BackgroundImage"
        app:layout_constraintEnd_toEndOf="@+id/ScreenSwitcher"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="@+id/ScreenSwitcher"
        app:layout_constraintTop_toBottomOf="@+id/ScreenSwitcher"
        app:layout_constraintVertical_bias="0.0"/>


</androidx.constraintlayout.widget.ConstraintLayout>